--- a/02-f1drivers/src/templates/constructors.hbs
+++ b/02-f1drivers/src/templates/constructors.hbs
@@ -1,15 +1,2 @@
 <h2>Constructors</h2>
-<table class="table table-hover">
-  <thead>
-  <td>Name</td>
-  <td>Nationalität</td>
-  <td>Wikipedia</td>
-  </thead>
-  {{#each Constructors}}
-  <tr>
-    <td><a href="/constructors/{{this.constructorId}}">{{this.name}}</a></td>
-    <td>{{this.nationality}}</td>
-    <td><a href="{{this.url}}">Link</a></td>
-  </tr>
-  {{/each}}
-</table>
+{{> constructorPartial }}
