--- a/02-f1drivers/src/templates/driver.hbs
+++ b/02-f1drivers/src/templates/driver.hbs
@@ -1,9 +1,6 @@
 <h1>{{driver.givenName}} {{driver.familyName}}</h1>
-<a href="{{driver.url}}">WikipediaLink</a>
+<a href="{{driver.url}}">Wikipedialink</a>
+<p>Geburtsdatum: {{date driver.dateOfBirth}}</p>
 
-<h3>Constructor</h3>
-<ul class="list">
-  {{#each constructors}}
-    <li><a href="/constructors/{{this.constructorId}}">{{this.name}}</a></li>
-  {{/each}}
-</ul>
+<h3>Constructor:</h3>
+{{> constructorPartial }}
